package design_patterns.strategy.fly

interface FlyBehaviour {
    fun fly()
}