package design_patterns.strategy.fly

/**
 * Created by osmanboy on 2/5/2022
 */
class FlyRockedPowered:FlyBehaviour {

    override fun fly() = println("I can fly with a rocket!")

}