package design_patterns.strategy.quack

class Quack : QuackBehaviour {
    override fun quack() = println("I can quack!") //утки которые крякают
}