package design_patterns.strategy.quack

interface QuackBehaviour {
    fun quack()
}